--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "theme_color": "#764ba2",
-  "background_color": "#764ba2",
+  "theme_color": "#7C5CFF",
+  "background_color": "#7C5CFF",
   "scope": "/",
   "lang": "fr-FR",
   "dir": "ltr",
