--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
   "name": "RadioFM - Toutes vos radios préférées",
   "short_name": "RadioFM",
   "description": "Écoutez vos radios françaises préférées en ligne. Plus de 19 stations : généralistes, rock, info, thématiques. 100% gratuit, sans pub.",
-  "start_url": "https://radiofm.ovh/",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#7C5CFF",
   "background_color": "#7C5CFF",
-  "scope": "https://radiofm.ovh/",
-  "id": "https://radiofm.ovh/",
+  "scope": "/",
+  "id": "/",
   "lang": "fr-FR",
   "dir": "ltr",
   "categories": ["music", "entertainment", "lifestyle", "news"],
