--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
   "redirects": [
     {
-      "source": "https://www.radiofm.ovh/:path*",
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.radiofm.ovh"
+        }
+      ],
       "destination": "https://radiofm.ovh/:path*",
       "permanent": true
     }
